# AlienInvasion

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  TODO  config.h.cmake  premake4.lua
.cmake/Modules/: MacroOutOfSourceBuild.cmake
include/astro/: star.hpp
include/galaxy/: generator.hpp  uniformsphere.hpp
include/math/: point.hpp
include/profile/: generator.hpp  uniformsphere.hpp
include/tree/: node.hpp  tree.hpp
src/: CMakeLists.txt  main.cpp
src/astro/: star.cpp
src/galaxy/: CMakeLists.txt  generator.cpp  uniformsphere.cpp
src/math/: point.cpp
src/profile/: generator.cpp  uniformsphere.cpp
src/tree/: node.cpp  tree.cpp
